files/04_14_po.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
      requests:
        memory: 250Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
