files/04_16_po.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
  namespace: one
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
      requests:
        cpu: 2
        memory: 3Gi
      limits:
        cpu: 3
        memory: 4Gi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
