files/04_21_po.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: myvolume
    secret:
      secretName: mysecret2
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
    - name: myvolume
      mountPath: /etc/foo
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
