files/04_26_po.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: consumer
  name: consumer
  namespace: secret-ops
spec:
  volumes:
  - name: ssh
    secret:
      secretName: my-secret
  containers:
  - image: nginx
    name: consumer
    resources: {}
    volumeMounts:
    - name: ssh
      mountPath: /var/app
      readOnly: true
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
