files/05_03_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    readinessProbe:
      httpGet:
        path: /
        port: 80
        scheme: HTTP
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
