files/07_01_po.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  volumes:
  - name: myvolume
    emptyDir: {}
  containers:
  - name: busybox
    image: busybox
    args:
    - sh
    - -c
    - sleep 3600
    resources: {}
    volumeMounts:
    - mountPath: /etc/foo
      name: myvolume
  - name: busybox2
    image: busybox
    args:
    - sh
    - -c
    - sleep 3600
    resources: {}
    volumeMounts:
    - mountPath: /etc/foo
      name: myvolume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
