files/07_05_po.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox2
  name: busybox2
spec:
  volumes:
  - name: myvolume
    persistentVolumeClaim:
      claimName: mypvc
  containers:
  - name: busybox
    image: busybox
    args:
    - sh
    - -c
    - sleep 3600
    resources: {}
    volumeMounts:
    - mountPath: /etc/foo
      name: myvolume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
